# MLB-Tubes-IF2224-2026

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: arion_exceptions.hpp  main.cpp
src/diagnoser/: color.hpp  diagnoser.cpp  diagnoser.hpp  diagnostic.hpp
src/io/: char_machine.cpp  char_machine.hpp
src/lexer/: alphabet.cpp  alphabet.hpp  char_machine.cpp  char_machine.hpp  dfa_graph.cpp  dfa_graph.hpp  lexer.cpp  lexer.hpp  state.cpp  state.hpp  token.cpp  token.hpp
src/parser/: parse_expression.cpp  parse_function.cpp  parse_header.cpp  parse_node.cpp  parse_node.hpp  parse_statement.cpp  parser.cpp  parser.hpp
test/milestone-1/lexer-broken-inputs/: 01_unknown_ascii_symbols.expected.txt  01_unknown_ascii_symbols.in.txt  02_blank_lines_between_tokens.expected.txt  02_blank_lines_between_tokens.in.txt  03_unknown_between_valid.expected.txt  03_unknown_between_valid.in.txt  04_lone_equals_not_becomes.expected.txt  05_incomplete_relational.expected.txt  05_incomplete_relational.in.txt  06_unterminated_string.expected.txt  06_unterminated_string.in.txt  07_unclosed_brace_comment.expected.txt  07_unclosed_brace_comment.in.txt  08_unclosed_paren_star_comment.expected.txt  08_unclosed_paren_star_comment.in.txt  09_underscore_not_ident.expected.txt  09_underscore_not_ident.in.txt  10_unknowns_with_blank_lines.expected.txt  10_unknowns_with_blank_lines.in.txt  11_colon_space_equals_not_becomes.expected.txt  11_colon_space_equals_not_becomes.in.txt  12_digit_then_unknown.expected.txt  12_digit_then_unknown.in.txt  13_double_quote_char.expected.txt  13_double_quote_char.in.txt  15_bang_and_question.expected.txt  15_bang_and_question.in.txt  16_blank_then_unknown_then_blank.expected.txt  16_blank_then_unknown_then_blank.in.txt  17_brace_comment_star_paren_inside.expected.txt  17_brace_comment_star_paren_inside.in.txt  18_paren_star_comment_brace_inside.expected.txt  18_paren_star_comment_brace_inside.in.txt  19_brace_only_closed_with_star_paren_eof.expected.txt  19_brace_only_closed_with_star_paren_eof.in.txt  20_paren_star_only_closed_with_brace_eof.expected.txt  20_paren_star_only_closed_with_brace_eof.in.txt  21_paren_star_closed_with_brace_mismatch.expected.txt  21_paren_star_closed_with_brace_mismatch.in.txt
test/milestone-1/lexer-test-data/: 01_spec_example.in.txt  02_operators_arith_logic.expected.txt  02_operators_arith_logic.in.txt  03_relational.expected.txt  03_relational.in.txt  04_keywords_case_insensitive.expected.txt  04_keywords_case_insensitive.in.txt  05_literals.expected.txt  05_literals.in.txt  06_comments_brace_paren_star.expected.txt  06_comments_brace_paren_star.in.txt  07_maximal_munch_and_punct.expected.txt  07_maximal_munch_and_punct.in.txt  08_declaration_keywords.expected.txt  08_declaration_keywords.in.txt  09_brackets_and_range_dots.expected.txt  09_brackets_and_range_dots.in.txt  10_reserved_prefix_identifiers.expected.txt  10_reserved_prefix_identifiers.in.txt  11_downto_if_else.expected.txt  11_downto_if_else.in.txt  12_bubble_sort.expected.txt  12_bubble_sort.in.txt  13_prime_check.expected.txt  13_prime_check.in.txt  14_newton_sqrt.expected.txt  14_newton_sqrt.in.txt  15_fast_inv_sqrt.expected.txt  15_fast_inv_sqrt.in.txt  16_off_by_one.expected.txt  16_off_by_one.in.txt  17_schrodinger.expected.txt  17_schrodinger.in.txt  18_honest_names.expected.txt  18_honest_names.in.txt  (+9 more)
(+31 files in other folders)
